--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,11 @@ body{
     border-radius: 10px;
     -webkit-border-radius: 10px;
     padding: 3px 15px;
-    text-align: right;
+    /* text-align: right; */
     font-size: 60px;
     font-family: digital;
     color: #434343;
-    direction: rtl;
+    /* direction: rtl; */
 }
 .calculations input[type="text"]:focus{
     outline: none;
